# mealplanner

./: Cargo.toml  Dockerfile  docker-container-start.sh  shell.nix
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20250215_190556_create_recipes.rs  m20250215_192658_create_ingredients.rs
src/: lib.rs  main.rs
src/controllers/: recipe.rs
src/models/: ingredient.rs  mod.rs  prelude.rs  recipe.rs  recipe_ingredient.rs
src/models/_entities/: mod.rs
src/views/: mod.rs  not_found.rs  recipe.rs
templates/: base.hbs  base.html  not_found.html
templates/recipe/: list.html
views/recipe/: list.hbs
