[package]
name = "mealplanner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1", features = ["derive"] }

askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
